// Vitest Snapshot v1

exports[`components > N8nNotice > props > content > should render HTML 1`] = `
"<div id=\\"notice\\" role=\\"alert\\" class=\\"notice notice warning\\">
  <div class=\\"notice-content\\">
    <n8n-text-stub size=\\"small\\" compact=\\"true\\" tag=\\"span\\"><span id=\\"notice-content\\" role=\\"region\\" class=\\"truncated\\"><strong>Hello world!</strong> This is a notice.</span></n8n-text-stub>
  </div>
</div>"
`;

exports[`components > N8nNotice > props > content > should render correctly with content prop 1`] = `
"<div id=\\"notice\\" role=\\"alert\\" class=\\"notice notice warning\\">
  <div class=\\"notice-content\\">
    <n8n-text-stub size=\\"small\\" compact=\\"true\\" tag=\\"span\\"><span id=\\"notice-content\\" role=\\"region\\" class=\\"truncated\\">This is a notice.</span></n8n-text-stub>
  </div>
</div>"
`;

exports[`components > N8nNotice > props > content > should sanitize rendered HTML 1`] = `
"<div id=\\"notice\\" role=\\"alert\\" class=\\"notice notice warning\\">
  <div class=\\"notice-content\\">
    <n8n-text-stub size=\\"small\\" compact=\\"true\\" tag=\\"span\\"><span id=\\"notice-content\\" role=\\"region\\" class=\\"truncated\\"> This is a notice.</span></n8n-text-stub>
  </div>
</div>"
`;

exports[`components > N8nNotice > should render correctly 1`] = `
"<div id=\\"notice\\" role=\\"alert\\" class=\\"notice notice warning\\">
  <div class=\\"notice-content\\">
    <n8n-text-stub size=\\"small\\" compact=\\"true\\" tag=\\"span\\">This is a notice.</n8n-text-stub>
  </div>
</div>"
`;
